<?xml version="1.0"?>
<package>
  <name>topic_relay</name>
  <version>0.0.1</version>
  <description>
    
    Topic Relaying between two different ROS masters
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
</package>
